--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        @apply dark:bg-slate-900;
+        @apply dark:text-gray-300;
+    }
+}
+
+@layer components {
+    .heading {
+        @apply font-bold;
+        @apply text-6xl;
+    }
+}
