--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,4 +14,14 @@
         @apply font-bold;
         @apply text-6xl;
     }
+
+    .heading-sm {
+        @apply font-bold;
+        @apply text-4xl;
+    }
+
+    .heading-md {
+        @apply font-bold;
+        @apply text-5xl;
+    }
 }
